@@ -27,6 +27,8 @@ Bug fixes/enhancements:
 - ribexport: The Frame block now uses the frame number from the timer object
   (instead of always using 0).
 - ribexport: Added RenderMan support for the torus geometry.
+- cri: Improved library detection (uses renderer-specific environment variables
+  to locate the shared RenderMan library)
 - ri/cri: Passing unicode strings in a parameter list has caused an exception.
 
 ----------------------------------------------------------------------
